--- a/src/components/FriendList/FriendList.module.css
+++ b/src/components/FriendList/FriendList.module.css
@@ -3,9 +3,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);
     padding: 10px;
-    border-radius: 8px;
+    border-bottom: 1px rgba(0, 0, 0, 0.8);
 }
 .item {
     width: 60%;
